<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Detalle.Detalle_Nota">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--DATOS DE LA NOTA-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="65dp">

            <!--ICONO-TXT-ID NOTA-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!--ICONO-->
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:src="@drawable/id_nota_detalle"/>

                <!--TXT-->
                <TextView
                    android:text="@string/Id_nota_Detalle_TXT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:layout_marginStart="10dp"/>

            </androidx.appcompat.widget.LinearLayoutCompat>
            <!--DATO-ID NOTA-->
            <TextView
                android:id="@+id/Id_nota_Detalle"
                android:text="@string/Id_nota_Detalle"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <!--ICONO-TXT-UID USUARIO-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <!--ICONO-->
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:src="@drawable/uid_usuario_detalle"/>

                <!--TXT-->
                <TextView
                    android:text="@string/Uid_usuario_Detalle_TXT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:layout_marginStart="10dp"/>

            </androidx.appcompat.widget.LinearLayoutCompat>
            <!--DATO-UID USUARIO-->
            <TextView
                android:id="@+id/Uid_usuario_Detalle"
                android:text="@string/Uid_usuario_Detalle"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <!--ICONO-TXT-CORREO-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <!--ICONO-->
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:src="@drawable/correo_usuario_detalle"/>

                <!--TXT-->
                <TextView
                    android:text="@string/Correo_usuario_Detalle_TXT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:layout_marginStart="10dp"/>

            </androidx.appcompat.widget.LinearLayoutCompat>
            <!--DATO-CORREO-->
            <TextView
                android:id="@+id/Correo_usuario_Detalle"
                android:text="@string/Correo_usuario_Detalle"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <!--ICONO-TXT-TITULO-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <!--ICONO-->
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:src="@drawable/titulo_nota_detalle"/>

                <!--TXT-->
                <TextView
                    android:text="@string/Titulo_Detalle_TXT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:layout_marginStart="10dp"/>

            </androidx.appcompat.widget.LinearLayoutCompat>
            <!--DATO-TITULO-->
            <TextView
                android:id="@+id/Titulo_Detalle"
                android:text="@string/Titulo_Detalle"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <!--ICONO-TXT-DESCRIPCION-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <!--ICONO-->
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:src="@drawable/descripcion_nota_detalle"/>

                <!--TXT-->
                <TextView
                    android:text="@string/Descripcion_Detalle_TXT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:layout_marginStart="10dp"/>

            </androidx.appcompat.widget.LinearLayoutCompat>
            <!--DATO-DESCRIPCION-->
            <TextView
                android:id="@+id/Descripcion_Detalle"
                android:text="@string/Descripcion_Detalle"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="100dp"/>

            <!--ICONO-TXT-FECHA REGISTRO-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <!--ICONO-->
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:src="@drawable/fecha_registro_nota_detalle"/>

                <!--TXT-->
                <TextView
                    android:text="@string/Fecha_Registro_Detalle_TXT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:layout_marginStart="10dp"/>

            </androidx.appcompat.widget.LinearLayoutCompat>
            <!--DATO-FECHA REGISTRO-->
            <TextView
                android:id="@+id/Fecha_Registro_Detalle"
                android:text="@string/Fecha_Registro_Detalle"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <!--ICONO-TXT-FECHA NOTA -->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <!--ICONO-->
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:src="@drawable/fecha_nota_detalle"/>

                <!--TXT-->
                <TextView
                    android:text="@string/Fecha_Nota_Detalle_TXT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:layout_marginStart="10dp"/>

            </androidx.appcompat.widget.LinearLayoutCompat>
            <!--DATO-FECHA NOTA-->
            <TextView
                android:id="@+id/Fecha_Nota_Detalle"
                android:text="@string/Fecha_Nota_Detalle"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <!--ICONO-TXT-ESTADO-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <!--ICONO-->
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:src="@drawable/estado_detalle"/>

                <!--TXT-->
                <TextView
                    android:text="@string/Estado_Detalle_TXT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:layout_marginStart="10dp"/>

            </androidx.appcompat.widget.LinearLayoutCompat>
            <!--DATO-ESTADO-->
            <TextView
                android:id="@+id/Estado_Detalle"
                android:text="@string/Estado_Detalle"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--Boton imporatante-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="-55dp"
            android:background="#34495E">

            <Button
                android:id="@+id/Boton_Importante"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/icono_nota_no_importante"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/Boton_Importante"
                android:textColor="#fff" />

            <Button
                android:id="@+id/bnt_share_note"
                android:drawableTop="@drawable/icon_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="Compartir"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>